[package]
name = "test_android"
version = "0.23.2"
authors = ["Aaron Housh <dispersias@gmail.com>"]
edition = "2018"

[lib]
crate-type = [ "lib", "cdylib" ]

[dependencies]
winit = { git = "https://github.com/rust-windowing/winit" }
simple_logger = "1"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { git = "https://github.com/rust-windowing/android-ndk-rs" }

[package.metadata.android]
build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]